--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         <li><i class="fa fa-linkedin"></i></li>
         <li><i class="fa fa-instagram"></i></li>
     </ul>
+
+    <hr>
+    <p class="copy">Copyright <span>&copy;</span> 2021</p>
 </footer>
 </body>
 <script type="text/javascript" src="app.js"></script>
