--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <!-- follow us -->
     <h3>Follow us</h3>
     <ul class="follow-links">
-        <li><i class="fa fa-facebook"></i></li>
-        <li><i class="fa fa-twitter"></i></li>
-        <li><i class="fa fa-linkedin"></i></li>
-        <li><i class="fa fa-instagram"></i></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
 
     <hr>
