--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <h3>Follow us</h3>
     <ul class="follow-links">
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://youtu.be/KdftbYqA_VQ" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://youtu.be/EEvopkbc4FE" target="_blank"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://youtu.be/nVmXsBNfwHY?t=131" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
 
     <hr>
