--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             </div>
         </nav>
     </header>
+    <!-- little dot -->
+    <div class="little-dot"></div>
 
     <!-- offers -->
 
