minor footer changes

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <li><a href="https://youtu.be/EEvopkbc4FE" target="_blank"><i class="fa fa-instagram"></i></a></li>
         <li><a href="https://youtu.be/nVmXsBNfwHY?t=131" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
+    <p>View source code: <a href="https://github.com/hardikg2907/The-Uke-Site" target="_blank"><i class="fa fa-github"></i></a></p>
 
     <hr>
     <p class="copy">Copyright <span>&copy;</span> 2021</p>
